# restaurent-receptionist

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  railway.json  start.sh  token_server.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
